# ingenieria-de-software

./: README.md
CMake.1/: CMakeLists.txt  main.cpp
CMake.2/: CMakeLists.txt  main.cpp
